--- a/_objects.list-bare.scss
+++ b/_objects.list-bare.scss
@@ -6,8 +6,8 @@
  * The list-bare object simply removes any indents and bullet points from lists.
  */
 
-@import 'inuit-defaults/settings.defaults';
-@import 'px-functions-design/sass/tools.functions';
+@import '../inuit-defaults/settings.defaults';
+@import '../px-functions-design/tools.functions';
 
 @if import-once('objects.list-bare') {
   
