--- a/_objects.list-bare.scss
+++ b/_objects.list-bare.scss
@@ -4,18 +4,14 @@
 /// @group px-list-bare-design
 ////
 
-@import '../px-defaults-design/settings.defaults';
+@import 'px-defaults-design/_settings.defaults.scss';
 
 /// @type String [default] - Prepend value for all generated classes
 $inuit-list-bare-namespace  : $inuit-namespace !default;
-
-@if import-once('objects.list-bare') {
   
-  .#{$inuit-list-bare-namespace}list-bare,
-  %#{$inuit-list-bare-namespace}list-bare {
-      margin:  0;
-      padding: 0;
-      list-style: none;
-  }
-
+.#{$inuit-list-bare-namespace}list-bare,
+%#{$inuit-list-bare-namespace}list-bare {
+    margin:  0;
+    padding: 0;
+    list-style: none;
 }
