Added more docs to demo

--- a/src/style.scss
+++ b/src/style.scss
@@ -13,6 +13,8 @@
 @import "px-code-design/_base.code.scss";
 
 // Objects
+$inuit-enable-btn--primary      : true;
+
 @import "px-buttons-design/_objects.buttons.scss";
 
 // List Bare
