--- a/_objects.list-bare.scss
+++ b/_objects.list-bare.scss
@@ -17,4 +17,5 @@ $inuit-list-bare-namespace  : $inuit-namespace !default;
     margin:  0;
     padding: 0;
     list-style: none;
+    line-height: $inuit-base-line-height;
 }
